--- a/public/project/client/views/dashboard/tweets/tweets.html
+++ b/public/project/client/views/dashboard/tweets/tweets.html
@@ -1,63 +1,79 @@
 
-	<div ng-controller="TweetList">
+<div ng-controller="TweetList">
 
-		<div class="row">
-			<div class="col-lg-12">
-				<h1><img id="twitter-logo" src="images/Twitter_logo_white.png" /></h1>
-			</div>
-		</div>
+    <!--<div class="row">-->
+        <!--<div class="col-lg-12">-->
+            <!--<h1><img id="twitter-logo" src="images/Twitter_logo_white.png" /></h1>-->
+        <!--</div>-->
+    <!--</div>-->
 
-		<div id="search-container" class="row">
-			<div class="col-lg-3">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Enter Twitter Handle
+                        <div class="panel-control pull-right">
+                            <a class="panelButton"><i class="fa fa-refresh"></i></a>
+                            <a class="panelButton"><i class="fa fa-minus"></i></a>
+                            <a class="panelButton"><i class="fa fa-remove"></i></a>
+                        </div>
+                    </h3>
+                </div>
+                <div class="panel-body">
+                    <div id="search-container" class="row">
+                        <div class="col-lg-3">
 
-				<!-- this form will trigger the getTweets function in the javascript controller on submit -->
-				<form class="input-group" ng-submit="getTweets()" >
-	  			<span class="input-group-addon">@</span>
+                            <!-- this form will trigger the getTweets function in the javascript controller on submit -->
+                            <form class="input-group" ng-submit="getTweets()" >
+                                <span class="input-group-addon">@</span>
 
-					<!-- this text input is binded to a variable in the javascript controller -->
-				  <input type="text" class="form-control" placeholder="TwitterDev" ng-model="username">
+                                <!-- this text input is binded to a variable in the javascript controller -->
+                                <input type="text" class="form-control" placeholder="TwitterDev" ng-model="username">
 
 					<span class="input-group-btn">
 		        <button class="btn btn-default" type="submit">Get Tweets</button>
 		      </span>
 
-				</form>
-   		</div>
-		</div>
+                            </form>
+                        </div>
+                    </div>
 
-		<div class="row clearfix">
-			<div class="col-lg-12">
+                    <div class="row clearfix">
+                        <div class="col-lg-12">
 
-		    	<div id="tweet-list">
+                            <div id="tweet-list">
 
-		    		<!-- this div will repeat for every tweet object in the array using a template-expanding directive -->
-		    		<div ng-repeat="tweet in tweetsResult" class="tweet-item">
+                                <!-- this div will repeat for every tweet object in the array using a template-expanding directive -->
+                                <div ng-repeat="tweet in tweetsResult" class="tweet-item">
 
-		    			<!-- sanitized HTML binding -->
-							<div ng-bind-html="tweet.oEmbed.html"></div>
+                                    <!-- sanitized HTML binding -->
+                                    <div ng-bind-html="tweet.oEmbed.html"></div>
 
-							<!-- binding to Tweet source property -->
-							<div class="tweet-details">
-								Tweeted from <span ng-bind-html="tweet.source"></span>
+                                    <!-- binding to Tweet source property -->
+                                    <div class="tweet-details">
+                                        Tweeted from <span ng-bind-html="tweet.source"></span>
 
-								<!-- play around with rendering different Tweet properties -->
-								<!-- <p>{{tweet.user.screen_name}}</p> -->
-								<!-- <p>{{tweet.text}}</p> -->
-							</div>
-		    		</div>
+                                        <!-- play around with rendering different Tweet properties -->
+                                        <!-- <p>{{tweet.user.screen_name}}</p> -->
+                                        <!-- <p>{{tweet.text}}</p> -->
+                                    </div>
+                                </div>
 
-		    	</div>
+                            </div>
 
-		  </div>
-  	</div>
+                        </div>
+                    </div>
 
-		<div class="row">
-			<div class="col-lg-12">
+                    <div class="row">
+                        <div class="col-lg-12">
 
-				<!-- this button will trigger the getMoreTweets function in the javascript controller -->
-		  	<button type="button" class="load-more-btn btn btn-default" ng-click="getMoreTweets()">Get More Tweets</button>
+                            <!-- this button will trigger the getMoreTweets function in the javascript controller -->
+                            <button type="button" class="load-more-btn btn btn-default" ng-click="getMoreTweets()">Get More Tweets</button>
 
-	  	</div>
-	  </div>
-
-	</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
