--- a/public/project/client/views/404-page.html
+++ b/public/project/client/views/404-page.html
@@ -4,7 +4,7 @@
         	<a ui-sref="home" class="hvr-pulse-grow"><img src="images/flat-avatar.png" class="user-avatar" /></a>
 			<h1>TrendsCaster </h1>
 			<div class="four-container text-center">
-				<h1>404</h1>
+				<h1>You must <a ng-class="{active: $state.includes('login')}" ui-sref="login">{{ 'login' }}</a></h1>
 			</div>
 			Oops! Page not found.
 		</div>
