--- a/public/project/client/views/sidebar/sidebar.html
+++ b/public/project/client/views/sidebar/sidebar.html
@@ -1,4 +1,4 @@
-<aside id="sidebar">
+<aside id="sidebar" ng-show="currentUser">
 	<div class="sidenav-outer">
 		<menubar></menubar>
 		<sidebarwidgets></sidebarwidgets>
