--- a/public/project/client/views/login/login.view.html
+++ b/public/project/client/views/login/login.view.html
@@ -16,7 +16,7 @@
 				<!--<button ng-click="submit()" class="btn btn-white btn-outline btn-lg btn-rounded progress-login" progress-button="authenticate()">{{ 'login with twitter' }}</button>-->
 				&nbsp;
                 <!--<a ui-sref="/auth/twitter"><button type="submit" class="btn btn-white btn-outline btn-lg btn-rounded">{{ 'Login With Twitter' }}</button></a>-->
-                <a href="/auth/twitter">{{ 'Login With Twitter' }}</a>
+                <a href="/auth/twitter" class="btn btn-primary btn-rounded" role="button">{{ 'Login With Twitter' }}</a>
 				<!--<a ui-sref="signup"><button type="submit" class="btn btn-white btn-outline btn-lg btn-rounded">{{ 'registerhere' }}</button></a>-->
 			</form>
 		</div>
