Made changes to topnav

--- a/public/project/client/views/topnav/topnav.html
+++ b/public/project/client/views/topnav/topnav.html
@@ -16,11 +16,11 @@
                 <input type="text" class="form-control" placeholder="">
             </div>
         </form>
-        <!--<ul class="navbar-tweet">-->
-            <!--<li>-->
-                <!--<a href="https://twitter.com/intent/tweet?screen_name="><img src="images/tweet.png" class="topnav-img" alt=""><span class="hidden-sm">Tweet</span></a>-->
-            <!--</li>-->
-        <!--</ul>-->
+        <ul class="navbar-tweet">
+            <li>
+                <a href="https://twitter.com/intent/tweet?screen_name="><img src="images/tweet.png" class="topnav-img" alt=""><span class="hidden-sm">Tweet</span></a>
+            </li>
+        </ul>
         <ul class="nav navbar-nav pull-right navbar-right">
             <!--<li class="padder-h-xs"><button class="btn btn-primary btn-rounded" ng-click="open()">Tweet</button></li>-->
             <li class="dropdown color-picker" dropdown on-toggle="toggled(open)">
@@ -96,9 +96,9 @@
             </ul>
         </li>
     </ul>
-    <!--<ul class="navbar-tweet hidd">-->
-        <!--<li>-->
-            <!--<a href="https://twitter.com/intent/tweet?screen_name="><img src="images/twitter-icon.png" class="topnav-img" alt=""></a>-->
-        <!--</li>-->
-    <!--</ul>-->
+    <ul class="navbar-tweet hidd">
+        <li>
+            <a href="https://twitter.com/intent/tweet?screen_name="><img src="images/twitter-icon.png" class="topnav-img" alt=""></a>
+        </li>
+    </ul>
 </nav>
