--- a/public/project/client/views/dashboard/trending/trending.html
+++ b/public/project/client/views/dashboard/trending/trending.html
@@ -1,4 +1,4 @@
-<div class="conter-wrapper" ng-controller="MainCtrl">
+<div class="conter-wrapper" ng-controller="MainCtrl" ng-show="currentUser">
     <div class="row">
         <div class="col-md-12">
             <div class="panel panel-primary">
