--- a/public/project/client/views/dashboard/home/home.view.html
+++ b/public/project/client/views/dashboard/home/home.view.html
@@ -4,6 +4,11 @@
 		<div class="col-lg-8 col-md-6">
 			<div class="map-container box padder" ng-init="load()">
 				<div id="world-map" style="width: 100%; height: 320px"></div>
+                <ul>
+                    <li>
+                        <a href="https://twitter.com/intent/tweet?screen_name="><img src="images/tweet.png" class="topnav-img" alt=""><span class="hidden-sm">Tweet</span></a>
+                    </li>
+                </ul>
 			</div>
 		</div>
 		<div class="col-lg-4 col-md-6">
