--- a/public/project/client/views/dashboard/invoice.html
+++ b/public/project/client/views/dashboard/invoice.html
@@ -1,42 +1,40 @@
-<pageheader pagename="Invoice" subtitle="Invoice Page subtitle"></pageheader>
-<div class="panel panel-default">
+<!--<pageheader pagename="Invoice" subtitle="Invoice Page subtitle"></pageheader>-->
+<div class="panel panel-default" ng-show="currentUser">
 	<div class="panel-body">
 		<div class="invoice">
 			<div class="row">
 				<div class="col-md-6">
-					<a href="{{ url('/') }}"><span class="text text-muted">&nbsp;Ani Theme</span></a>
+					<a href="{{ url('/') }}"><span class="text text-muted">&nbsp;TrendsCaster</span></a>
 				</div>
-				<div class="col-md-6 text-right">
-					<p class="text-dark">
-						#1233219 / 01 Jan 2014  <br><small class="text-light"> Lorem ipsum dolor sit amet </small>
-					</p>
-				</div>
+				<!--<div class="col-md-6 text-right">-->
+					<!--<p class="text-dark">-->
+						<!--#1233219 / 01 Jan 2014  <br><small class="text-light"> Lorem ipsum dolor sit amet </small>-->
+					<!--</p>-->
+				<!--</div>-->
 			</div>
 			<hr>
 			<div class="row">
 				<div class="col-md-4">
-					<h4>Client:</h4>
+					<h4>Project:</h4>
 					<div class="well">
 						<address>
-							<strong class="text-dark">Customer Company, Inc.</strong>
+							<strong class="text-dark">TrendCaster.</strong>
 							<br>
-							1 Infinite Loop
+							Sagar Neeli
 							<br>
-							Cupertino, CA 95014
-							<br>
-							<abbr title="Phone">P:</abbr> (123) 456-7890
+							<abbr title="Phone">P:</abbr> (857) 991-7295
 						</address>
 						<address>
 							<strong class="text-dark">E-mail:</strong>
 							<a href="mailto:#">
-								info@customer.com
+								sagarneeli1191@gmail.com
 							</a>
 						</address>
 					</div>
 				</div>
 				<div class="col-md-4"></div>
 				<div class="col-md-4 pull-right payment-detals-wrap">
-					<h4>Payment Details:</h4>
+					<h4>Features of the App:</h4>
 					<ul class="list-unstyled invoice-details">
 						<li>
 							<strong>V.A.T Reg #:</strong> 233243444
